testdata/parser/negative/5.txt
Parse error at 5.pdl:5:2: Unresolved method
	sync(a, b);
	^
